@@ -122,7 +122,7 @@
 %				$settings_visible++ if $preset;
 %				$settings_visible++ if $disp;
 				
-				<div style="border-bottom: 1px dashed brown;">
+				<div style="border-bottom: 1px dashed bn;">
 					<span>
 						<button class="notfirst" id="hide" style="<% $settings_visible ? "" : "display: none;"%>">-</button>
 						<button class="notfirst" id="show" style="<% $settings_visible ? "display: none;" : ""%>">+</button>
@@ -684,88 +684,110 @@
 
 %					my ($assigned_judges_past, $paired_panels_current, $assigned_judges_current, $needed_panels_current, $needed_judges_current, $paired_panels_future, $assigned_judges_future, $needed_panels_future, $needed_judges_future, $group_rds_left, $assigned_to_last, $unassigned_burned_already, $unassigned_one_plus_left, $unassigned_one_left, $total_in_group) = $m->comp("/funclib/judge_oblig_count_by_group.mas", current_rd_id => $round->id );				
 
-					<div class="yellowrow">
+					<h5>
 						<% $group->abbr %> judge stats
-					</div>
+					</h5>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full">
+						<span class="sixth rightalign">
 							<% $total_in_group %> 
 						</span>
+						<span class="fivesixth">
 							total judges in <% $group->abbr %>
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full">
+						<span class="sixth rightalign">
 							<% $assigned_judges_past %> 
 						</span>
-						assignments before <% $round->realname %>
+						<span class="fivesixth">
+							assignments before <% $round->realname %>
+						</span>
 					</div>
 
-					<div class="yellowrow">
+					<h5>
 						Current paired / still needed
-					</div>
+					</h5>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> full">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="sixth rightalign">
 							<% ($assigned_judges_current - $needed_judges_current) %>
 						</span>
-						judges assigned
+						<span class="fivesixth">
+							judges assigned
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="sixth rightalign">
 							<% $assigned_to_last %> 
 						</span>
+						<span class="fivesixth">
 							in for last rd of commitment
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="sixth rightalign">
 							<% $unassigned_burned_already %> 
 						</span>
+						<span class="fivesixth">
 							unassigned & burned already
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="sixth rightalign">
 							<% $unassigned_one_left %>
 						</span>
+						<span class="fivesixth">
 							unassigned with 1 round left
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> ">
-						<span class="microspan">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="sixth rightalign">
 							<% $unassigned_one_plus_left %>
 						</span>
+						<span class="fivesixth">
 							unassigned with &gt;1 round left
+						</span>
 					</div>
 
-					<div class="yellowrow">
+					<h5>
 						Future paired & needed
+					</h5>
+
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="third">
+							Future Need:
+						</span>
+						<span class="sixth">
+							<% $needed_judges_future %>
+						</span>
+						<span class="third">
+							Assigned:
+						</span>
+						<span class="sixth">
+							<% $assigned_judges_future %>
+						</span>
 					</div>
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> padno marno">
-						<span class="half rightalign">
-							Judges:
+				 	<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="threequarter">
+							Rounds of committment left:
 						</span>
-						<span class="half marno">
-							<% $assigned_judges_future %>-<% $needed_judges_future %>
-						</span>
-					</div>
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> padno marno">
-						<span class="half rightalign">
-							Rds left:
-						</span>
-						<span class="half marno">
+						<span class="quarter">
 							<% $group_rds_left %>
 						</span>
 					</div>
-										<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> padno marno">
-						<span class="half rightalign">
-							Bodies left:
+
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> full marno">
+						<span class="threequarter">
+							Individual judges not burned:
 						</span>
-						<span class="half marno">
+						<span class="quarter">
 							<% $total_in_group-$assigned_to_last-$unassigned_burned_already %>
 						</span>
 					</div>
@@ -774,7 +796,7 @@
 				
 %				if ($prefs eq "ordinals") {
 
-					<div class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %> padno marno">
+					<div class="<% ($switch++ % 2) ? "odd" : "even" %> nospace">
 
 %						my ($avg_pref, $avg_mut, $worst_pref, $worst_mut) = $m->comp("/funclib/mjp_diagnostics.mas", round => $round );				
 %						my @avg_pref = @{$avg_pref}; my @worst_pref = @{$worst_pref}; my @avg_mut = @{$avg_mut}; my @worst_mut = @{$worst_mut};
@@ -789,10 +811,12 @@
 %				}
 
 %				if ($rounds_per > 0) {
+
 					<a class="blue half" href="judge_fits.mhtml?round_id=<% $round->id %>">
 						Judge fits
 					</a>
-					<a class="blue half" href="judge_use_status.mhtml?round_id=<% $round->id %>&event_id=<% $round->event %>">
+
+					<a class="blue right half" href="judge_use_status.mhtml?round_id=<% $round->id %>&event_id=<% $round->event %>">
 						Judge Use
 					</a>
 %				}
@@ -820,7 +844,7 @@
 
 	<div class="main">
 
-		<div class="padno marno">
+		<div class="nospace">
 		
 			<span class="twofifth nowrap">
 				<h4 class="nospace">
