@@ -1,4 +1,14 @@
 
+	- The javascript powermatcher manual screens was not working in
+	  non-sidelocked rounds.  It has been educated.
+	
+	- The "Judging elsewhere" pulldown now shows correct prefs for the round
+	  the judge is elsewhere judging.
+
+	- The "Judges not used" screen shows the bracket.  Further it was not
+	  always filtering out rounds a judge was constrained against, this is
+	  fixed.
+
 	- Fixed some truly bizarre style goofs with the setup screents. 
 
 	- Fixed a bug that saves dates when you try to input times in 14 AD instead
